--- a/basic/src/main/resources/application.properties
+++ b/basic/src/main/resources/application.properties
@@ -1,1 +1,38 @@
 spring.application.name=basic
+
+# --------------------
+# 1. H2 DATABASE SETTINGS
+# --------------------
+# H2 ?? URL: `mem:`? ??? ??? ????, DB ??? `testdb`? ??????.
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# ????? ????? ???? ?????. (??? ????? ?? ???? ??)
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 DB ???? ???
+spring.datasource.driver-class-name=org.h2.Driver
+
+
+# --------------------
+# 2. JPA & HIBERNATE SETTINGS
+# --------------------
+# ?????? ?? ? DDL(???)? ???? ????? ??
+# create-drop: ?????? ?? ? ???? ??? (?? ??? ??)
+spring.jpa.hibernate.ddl-auto=create-drop 
+
+# ?? ??? SQL ??? ???? ??
+spring.jpa.show-sql=true
+
+# Hibernate? SQL? ????? ?? ?? ????.
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# --------------------
+# 3. H2 CONSOLE SETTINGS
+# --------------------
+# H2 ? ?? ???
+spring.h2.console.enabled=true
+
+# H2 ? ?? ?? ?? ?? (??: /h2-console)
+spring.h2.console.path=/h2-console
