--- a/stomp/build.gradle
+++ b/stomp/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
